Full documentation: http://jonreid.github.com/OCHamcrest/
Latest sources: https://github.com/jonreid/OCHamcrest
Hamcrest information: http://code.google.com/p/hamcrest/

== Version 1.2 == *IN PROGRESS*

* Deprecated helper function HCRequireNonNilString. Use HCRequireNonNilObject instead.
* Since nil cannot be directly stored in collections, collection matchers now guard against nil.


== Version 1.1 ==

* New matchers:
  - "contains" matches collection containing matching items in order.
  - "containsInAnyOrder" matches collection containing matching items in any order.

* Fixed crash that occurred when trying to describe the matchers allOf, anyOf and isIn on iOS. Related to -ObjC linker flag.

* Changed documentation from HTML to Xcode documentation set. Run "make install" from the Documentation folder to install.

* Rearranged documentation modules to make things easier to find.

* Changed convenience methods to invoke superclass and return id, to support possibility of subclassing matchers.

1.1.2:
- Added the new matchers to the master header and to the iOS target.
- Fixed distribution zip file to preserve symlinks in frameworks.


== Version 1.0 ==

26 Oct 2010: First official release, including:
* Documentation
* Examples for
  - Cocoa
  - iOS
  - Creating a custom matcher

07 Oct 2010:
* For iOS: Added OCHamcrestIOS.framework target which provides release builds for both simulator and device into a single framework. Yes, a framework that can be used for iOS development without requiring users to mess with header search paths and link settings. Simply drop the framework into your project and #import <OCHamcrestIOS/OCHamcrestIOS.h> - Aaron Jacobs

06 Oct 2010:
* Work around bug in iPhone simulator that causes a test failure to terminate the app. Fix provided by Aaron Jacobs.

06 Sep 2010:
* Added static library target and changes for iOS.

01 Dec 2009: