@@ -4,6 +4,7 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 == Version 1.2 == *IN PROGRESS*
 
+* Deprecated HCInvocation's helper class method +createInvocationForSelector:onClass:, renaming it to +invocationForSelector:onClass:.
 * Deprecated helper function HCRequireNonNilString. Use HCRequireNonNilObject instead.
 * Since nil cannot be directly stored in collections, collection matchers now guard against nil.
 
